# Amazon

./: .gitattributes  .gitignore  README.md  main.py
AmazonPlay/AmazonPlay/src/ai/: amazon_ai_agent.py
AmazonPlay/AmazonPlay/src/ai/amazons_engine/: config.txt
AmazonPlay/AmazonPlay/src/ai/amazons_engine/engine/KataGoData/opencltuning/: tune8_gpuIntelRIrisRXeGraphics_x10_y10_c256_mv10.txt  tune8_gpuIntelRUHDGraphics_x9_y9_c256_mv10.txt  tune8_gpuNVIDIAGeForceGTX1650_x10_y10_c256_mv10.txt
AmazonPlay/AmazonPlay/src/ai/src/: CMakeLists.txt  cmcts.cpp  readme.txt
AmazonPlay/AmazonPlay/src/ai/src2/: cmcts.cpp  readme.txt
AmazonPlay/AmazonPlay/src/core/: simulator.py
AmazonPlay/AmazonPlay/src/gui/: amazon_board_widget.py  amazon_main_window.py
src/ai/: amazon_ai_agent.py  amazons_engine.py
src/ai/amazons_engine/: engine.cfg
src/ai/amazons_engine/engine/KataGoData/opencltuning/: tune8_gpuIntelRUHDGraphics_x10_y10_c256_mv10.txt  tune8_gpuIntelRUHDGraphics_x8_y8_c256_mv10.txt
src/ai/kataAmazonEngine/KataGoData/opencltuning/: tune8_gpuNVIDIAGeForceGTX1650_x10_y10_c256_mv10.txt
src/ai/src/: CMakeLists.txt  cmcts.cpp  readme.txt
src/ai/src2/: CMakeLists.txt  cmcts.cpp
src/gui/: amazon_board_widget.py  amazon_main_window.py
